--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bootstrap": "^4.*"
   },
   "devDependencies": {
+    "@types/bootstrap": "^4.3.0",
     "@types/jquery": "^3.3.29",
     "conventional-changelog": "^3.1.8",
     "del": "^4.1.1",
