--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
         "sourceMap": true,
         "target": "es2017",
         "module": "amd",
-        "declaration": false,
+        "declaration": true,
         "noImplicitAny": true,
         "removeComments": true,
         "emitDecoratorMetadata": true,
@@ -17,18 +17,8 @@
             "dom"
         ]
     },
-    "filesGlob": [
-        "./src/**/*.ts",
-        "./test/**/*.ts",
-        "./typings/index.d.ts",
-        "./custom_typings/**/*.d.ts",
-        "./jspm_packages/**/*.d.ts"
-    ],
-    "exclude": [
-        "node_modules",
-        "jspm_packages",
-        "dist",
-        "build"
+    "include": [
+        "./src/**/*.ts"
     ],
     "atom": {
         "rewriteTsconfig": false
