--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "description": "aurelia web components for bootstrap 4",
   "main": "dist/index.js",
-  "types": "src/index.ts",
   "scripts": {
+    "build": "au build-plugin",
+    "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -34,6 +35,9 @@
   "devDependencies": {
     "@types/bootstrap": "^4.3.1",
     "@types/jquery": "^3.3.31",
+    "@types/node": "^13.1.6",
+    "aurelia-cli": "^1.2.3",
+    "aurelia-tools": "^2.0.0",
     "conventional-changelog": "^3.1.15",
     "del": "^4.1.1",
     "gulp": "^4.0.2",
@@ -42,13 +46,18 @@
     "gulp-htmlmin": "^5.0.1",
     "gulp-notify": "^3.2.0",
     "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-tslint": "^8.1.4",
     "gulp-typescript": "^5.0.1",
+    "gulp-watch": "^5.0.1",
+    "minimatch": "^3.0.4",
     "require-dir": "^1.2.0",
+    "through2": "^3.0.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.3",
+    "vinyl-fs": "^3.0.3",
     "vinyl-paths": "^2.1.0",
     "yargs": "^13.3.0"
   }
